Remove position: relative from .handle-wrap to fix handle display

--- a/app/assets/stylesheets/spotlight/_blacklight_configuration.scss
+++ b/app/assets/stylesheets/spotlight/_blacklight_configuration.scss
@@ -11,10 +11,7 @@
       @include edit-in-place-highlighting;
     }
 
-    // the effect of position: relative on table elements is undefined, so put a div in there.
-    // this fix is for Firefox
     .handle-wrap {
-      position: relative;
       padding: 0.75rem 0.75rem 0.75rem 40px;
       margin: 0;
       margin-top: -1px;
